tree-sitter-lcdcdsl/test/corpus/statements.txt
==========
Identifier
==========

$mt@123.456.ipa

---

(source_file
  (multi_expression
    (expression_sep)
    (identifier)
    (expression_sep)))

============
No Arguments
============

$dummy()

---

(source_file
  (multi_expression
    (expression_sep)
    (function_call
      (identifier))
    (expression_sep)))

====================
Simple Function Call
====================

$mt.sc.ot_mt($ot.123.ipa)

---

(source_file
  (multi_expression
    (expression_sep)
    first: (function_call
      (identifier)
      (identifier))
    (expression_sep)))

=======================
Unquoted String Literal
=======================

$mt.sc.ot_mt(/ˈɥɵʉ̯pʰwɛsʰ/)

---

(source_file
  (multi_expression
    (expression_sep)
    (function_call
      (identifier)
      (unquoted_string_literal))
    (expression_sep)))

==============
All Around You
==============

$all.around ( " you " )

---

(source_file
  (multi_expression
    (expression_sep)
    (function_call
      (identifier)
      (dquoted_string_literal))
    (expression_sep)))

=====================
Complex Function Call
=====================

$_.identity(something, "else", $ohno@1234)

---

(source_file
  (multi_expression
    (expression_sep)
    (function_call
      (identifier)
      (unquoted_string_literal)
      (dquoted_string_literal)
      (identifier))
    (expression_sep)))

================
Unbounded Dquote
================

" unbounded

---

(ERROR
  (expression_sep)
  (UNEXPECTED '\0'))

=================
Broken Identifier
=================

$what. isthis

---

(source_file
  (multi_expression
    (expression_sep)
    (ERROR
      (identifier)
      (unquoted_string_literal))
    (unquoted_string_literal)
    (expression_sep)))

========
Addition
========

$mt.123.ipa + /ˈimʲ/

---

(source_file
  (multi_expression
    (expression_sep)
    (binary_expression
      (add_expression
        (identifier)
        (unquoted_string_literal)))
    (expression_sep)))

==========================
Addition With Escaped Plus
==========================

\+ + \+

---

(source_file
  (multi_expression
    (expression_sep)
    (binary_expression
      (add_expression
        (unquoted_string_literal)
        (unquoted_string_literal)))
    (expression_sep)))

====================
Addition Missing LHS
====================

 + 123

---

(source_file
  (multi_expression
    (expression_sep)
    (ERROR)
    (unquoted_string_literal)
    (expression_sep)))

====================
Addition Missing RHS
====================

$mt.sc.ot_mt(/ˈtʰɤɨ̯mjɨ̯əɾ/) +

---

(source_file
  (multi_expression
    (expression_sep)
    (binary_expression
      (add_expression
        (function_call
          (identifier)
          (unquoted_string_literal))
        (MISSING identifier)))))

========================
Parenthesis Expression 0
========================

(/ˈtʰɤɨ̯mjɨ̯əɾ/ + (/ˈmɑːrkʰjɪ/ + /ˈsʰɛwljɪ/))

---

(source_file
  (multi_expression
    (expression_sep)
    (parenthesis_expression
      (binary_expression
        (add_expression
          (unquoted_string_literal)
          (parenthesis_expression
            (binary_expression
              (add_expression
                (unquoted_string_literal)
                (unquoted_string_literal)))))))
    (expression_sep)))

========================
Parenthesis Expression 1
========================

$mt.sc.ot_mt(($ot.123.ipa + jə))

---

(source_file
  (multi_expression
    (expression_sep)
    (function_call
      (identifier)
      (parenthesis_expression
        (binary_expression
          (add_expression
            (identifier)
            (unquoted_string_literal)))))
    (expression_sep)))
